# news-app

./: .gitignore  hello.py  pyproject.toml  requirements.txt
news/: env-sample
news/edit/: admin.py  apps.py  forms.py  models.md  models.py  urls.py  views.py
news/edit/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_remove_category_image.py  0004_news.py  0005_alter_news_options_alter_news_image_alter_news_slug_and_more.py  0006_comment.py  0007_alter_news_image.py
news/edit/templates/edit/: add_news.html  edit_news.html  home.html
news/news/: settings.py  urls.py
news/static/css/: styles.css
news/static/js/: slug.js
news/templates/: base.html
